--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "randomvector"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.9.0"
+rand = "0.8.5" # 0.9.0 is apparently only in alpha
